# AIROBOT

./: .gitignore  .gitmodules  README.md
Hardware/: README.md  TODO.md
ROS2_WS/: .gitignore  README.md  ros2_compose.yml  (+1 more)
Software/firmware/components/microros_prebuilt/: CMakeLists.txt  README.md
Software/firmware/components/microros_prebuilt/include/action_msgs/action_msgs/msg/detail/: goal_status_array__description.c
Software/firmware/components/microros_prebuilt/include/actionlib_msgs/actionlib_msgs/msg/detail/: goal_status_array__description.c
Software/firmware/components/microros_prebuilt/include/composition_interfaces/composition_interfaces/srv/detail/: load_node__description.c
Software/firmware/components/microros_prebuilt/include/diagnostic_msgs/diagnostic_msgs/srv/detail/: self_test__description.c
Software/firmware/components/microros_prebuilt/include/geometry_msgs/geometry_msgs/msg/detail/: inertia_stamped__description.c  polygon_instance_stamped__description.c  polygon_stamped__description.c  pose_with_covariance_stamped__description.c  transform_stamped__description.c  twist_with_covariance_stamped__description.c
Software/firmware/components/microros_prebuilt/include/lifecycle_msgs/lifecycle_msgs/srv/detail/: get_available_states__description.c  get_available_transitions__description.c  get_state__description.c
Software/firmware/components/microros_prebuilt/include/nav_msgs/nav_msgs/msg/detail/: path__description.c
Software/firmware/components/microros_prebuilt/include/nav_msgs/nav_msgs/srv/detail/: get_plan__description.c
(+214 files in other folders)
